Button small fix

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -691,7 +691,7 @@ section {
   background: var(--color-primary);
   border: 0;
   padding: 10px 30px;
-  color:#c18787
+  color:#c18787;
   transition: 0.4s;
   border-radius: 4px;
 }
